Added the ability to use multiple shaders at the same time.

--- a/src/main/resources/assets/evolution/lang/en_us.json
+++ b/src/main/resources/assets/evolution/lang/en_us.json
@@ -1,8 +1,8 @@
 {
-  "COMMENT_WORLD_TYPE": "_________________________________________________________________________________________________________WORLD TYPE",
+  "_COMMENT": "___________________________________________________________________________________________________________________________WORLD TYPE",
   "generator.ev_default": "Evolution World",
   "generator.ev_flat": "Evolution Flat",
-  "COMMENT_CREATIVE_TABS": "___________________________________________________________________________________________________CREATIVE TABS",
+  "_COMMENT": "________________________________________________________________________________________________________________________CREATIVE TABS",
   "itemGroup.evolution.dev": "Developer Items",
   "itemGroup.evolution.eggs": "Spawn Eggs",
   "itemGroup.evolution.liquids": "Liquids and Containers",
@@ -10,7 +10,7 @@
   "itemGroup.evolution.misc": "Misc",
   "itemGroup.evolution.parts_and_tools": "Parts and Tools",
   "itemGroup.evolution.trees_and_wood": "Trees and Wood",
-  "COMMENT_CONFIG": "________________________________________________________________________________________________________________CONFIGS",
+  "_COMMENT": "______________________________________________________________________________________________________________________________CONFIGS",
   "evolution.config.allowedValues": "Allowed Values: %1$s",
   "evolution.config.animatedTextures": "Animated Textures",
   "evolution.config.animatedTextures.comment": "Use animated textures when available in the current resource pack. Disabling will improve performance, but animated textures, such as fire, will appear static.",
@@ -96,7 +96,7 @@
   "forge.configgui.zombieBabyChance.comment": "Chance that a zombie (or subclass) is a baby. Allows changing the zombie spawning mechanic.",
   "forge.configgui.zombieBaseSummonChance": "Zombie Base Summon Chance",
   "forge.configgui.zombieBaseSummonChance.comment": "Base zombie summoning spawn chance. Allows changing the bonus zombie summoning mechanic.",
-  "COMMENT_COMMANDS": "_____________________________________________________________________________________________________________COMMANDS",
+  "_COMMENT": "_____________________________________________________________________________________________________________________________COMMANDS",
   "command.evolution.date.error": "The date cannot be set before %1$s at %2$s",
   "command.evolution.date.success": "The date has been changed to %1$s",
   "command.evolution.pause.pause.fail": "The game is already paused. Use /resume to resume the game",
@@ -106,22 +106,23 @@
   "command.evolution.pause.resume.info": "The game has been resumed globally",
   "command.evolution.pause.resume.success": "The game has been resumed for everyone",
   "command.evolution.shader.fail": "Could not find a shader with id %1$s",
-  "command.evolution.shader.query": "The id of the current shader is %1$s",
-  "command.evolution.shader.reset": "The current shader has been reset",
-  "command.evolution.shader.success": "The current shader has been set to %1$s",
+  "command.evolution.shader.noShader": "No shader is currently active",
+  "command.evolution.shader.query": "The ids of the current shaders are: %1$s",
+  "command.evolution.shader.reset": "The current shader list has been reset",
+  "command.evolution.shader.success": "Added shader %1$s to the current shader list",
   "command.evolution.shader.toggleOff": "Shaders have been turned off",
   "command.evolution.shader.toggleOn": "Shaders have been turned on",
   "command.evolution.temperature.item.fail": "The held item does not support temperature",
   "command.evolution.temperature.item.success": "Set the temperature of %1$s to %2$s K",
   "command.evolution.tickrate.change": "The game tickrate was changed to %1$s TPS",
   "command.evolution.tickrate.current": "The current game tickrate is %1$s TPS",
-  "COMMENT_KEYS": "_____________________________________________________________________________________________________________________KEYS",
+  "_COMMENT": "_________________________________________________________________________________________________________________________________KEYS",
   "key.build_assist": "Build Assist",
   "key.crawl.toggle": "Toggle Prone",
   "key.keyboard.left.control": "Left Control",
   "key.keyboard.left.win": "Left Win",
   "key.mouse.left": "Left Button",
-  "COMMENT_ENTITIES": "_____________________________________________________________________________________________________________ENTITIES",
+  "_COMMENT": "_____________________________________________________________________________________________________________________________ENTITIES",
   "entity.evolution.cow": "Cow",
   "entity.evolution.cow.plural": "Cows",
   "entity.evolution.player_corpse": "%1$s's Corpse",
@@ -209,9 +210,9 @@
   "entity.minecraft.zombie_villager": "Zombie Villager",
   "entity.minecraft.zombie_villager.plural": "Zombie Villagers",
   "entity.minecraft.zombified_piglin.plural": "Zombified Piglins",
-  "COMMENT_SPAWN_EGGS": "_________________________________________________________________________________________________________SPAWN EGGS",
+  "_COMMENT": "___________________________________________________________________________________________________________________________SPAWN EGGS",
   "item.evolution.cow_spawn_egg": "Cow Spawn Egg",
-  "COMMENT_STATUS EFFECT": "___________________________________________________________________________________________________STATUS EFFECT",
+  "_COMMENT": "________________________________________________________________________________________________________________________STATUS EFFECT",
   "effect.evolution.dehydration": "Dehydration",
   "effect.evolution.dehydration.desc.0": "Your deficient water intake has caused lack of water in your body, which will compromise basic metabolic functions.\n\nCauses:\n ► Disables natural health regeneration\n ► Disables your ability to sprint\n ► Increases stamina consumption\n\nMay cause:\n ► Dizziness",
   "effect.evolution.dehydration.desc.1": "Your deficient water intake has caused lack of water in your body, which has compromised basic metabolic functions.\n\nCauses:\n ► Disables natural health regeneration\n ► Disables your ability to sprint\n ► Increases stamina consumption\n ► Slowness\n\nMay cause:\n ► Dizziness",
@@ -284,12 +285,12 @@
   "effect.minecraft.wither.desc.3": "You are withering and take 1HP of damage every 5 ticks.",
   "effect.minecraft.wither.desc.4": "You are withering and take 1HP of damage every 2 ticks.",
   "effect.minecraft.wither.desc.5": "You are withering and take 1HP of damage every tick.",
-  "COMMENT_ACTIONBAR": "___________________________________________________________________________________________________________ACTIONBAR",
-  "evolution.actionbar.hitStake": "I should hit the stake with a Hammer first",
-  "evolution.actionbar.hook": "I should have some rope in my offhand first",
+  "_COMMENT": "____________________________________________________________________________________________________________________________ACTIONBAR",
+  "evolution.actionbar.hitStake": "You should hit the stake with a Hammer first",
+  "evolution.actionbar.hook": "You should have some rope in your offhand first",
   "evolution.actionbar.inertia": "Inertia canceled",
   "evolution.actionbar.twoHanded": "This item is two-handed!",
-  "COMMENT_SUBTITLES": "___________________________________________________________________________________________________________SUBTITLES",
+  "_COMMENT": "____________________________________________________________________________________________________________________________SUBTITLES",
   "evolution.subtitle.soil_collapse": "Landslide",
   "evolution.subtitle.spear_hit_entity": "Spear hits",
   "evolution.subtitle.spear_throw": "Spear Thrown",
@@ -300,7 +301,7 @@
   "evolution.subtitle.tree_falling": "Tree falling",
   "evolution.subtitle.weapon_hit_block": "Weapon hits block",
   "evolution.subtitle.wood_collapse": "Wood Collapsing",
-  "COMMENT_DEATH_MESSAGES": "_________________________________________________________________________________________________DEATH MESSAGES",
+  "_COMMENT": "_______________________________________________________________________________________________________________________DEATH MESSAGES",
   "death.attack.dehydration": "%1$s dehydrated to death",
   "death.attack.efficiency": "%1$s could not handle such efficiency!",
   "death.attack.fall_damage": "%1$s fell from a high place",
@@ -345,14 +346,14 @@
   "death.fell.killer.ladder": "%1$s was pushed off a ladder",
   "death.fell.killer.rope": "%1$s was pushed off a rope",
   "death.fell.killer.vines": "%1$s was pushed off some vines",
-  "COMMENT_ADVANCEMENTS": "_____________________________________________________________________________________________________ADVANCEMENTS",
+  "_COMMENT": "_________________________________________________________________________________________________________________________ADVANCEMENTS",
   "evolution.advancements.general.root.title": "Evolution",
   "evolution.advancements.general.root.description": "",
   "evolution.advancements.general.definitely_a_rock.title": "Definitely a rock",
   "evolution.advancements.general.definitely_a_rock.description": "Pick up a rock",
   "evolution.advancements.general.knapping.title": "Knapping",
   "evolution.advancements.general.knapping.description": "Use a rock in a knapping block to shape it into something useful",
-  "COMMENT_STATS": "___________________________________________________________________________________________________________________STATS",
+  "_COMMENT": "________________________________________________________________________________________________________________________________STATS",
   "stat.evolution.chests_opened": "Chests Opened",
   "stat.evolution.items_dropped": "Items Dropped",
   "stat.evolution.items_thrown": "Items Thrown",
@@ -419,7 +420,7 @@
   "stat_type.minecraft.killed_by.name": "Times you got killed",
   "stat_type.minecraft.killed_by.none": "You have never been killed by %1$s",
   "stat_type.minecraft.killed_by.once": "%1%s killed you once",
-  "COMMENT_GUIS": "_____________________________________________________________________________________________________________________GUIs",
+  "_COMMENT": "_________________________________________________________________________________________________________________________________GUIs",
   "evolution.gui.general.back": "Back",
   "evolution.gui.general.cancel": "Cancel",
   "evolution.gui.general.done": "Done",
@@ -516,7 +517,7 @@
   "evolution.gui.stats.itemsButton": "Items",
   "evolution.gui.stats.mobsButton": "Mobs",
   "evolution.gui.stats.timeButton": "Time",
-  "COMMENT_CALENDAR": "_____________________________________________________________________________________________________________CALENDAR",
+  "_COMMENT": "_____________________________________________________________________________________________________________________________CALENDAR",
   "evolution.calendar.day.1": "%1$sst",
   "evolution.calendar.day.2": "%1$snd",
   "evolution.calendar.day.3": "%1$srd",
@@ -551,7 +552,7 @@
   "evolution.calendar.month.october": "October",
   "evolution.calendar.month.november": "November",
   "evolution.calendar.month.december": "December",
-  "COMMENT_MATERIALS": "___________________________________________________________________________________________________________MATERIALS",
+  "_COMMENT": "____________________________________________________________________________________________________________________________MATERIALS",
   "evolution.material.andesite": "Andesite",
   "evolution.material.basalt": "Basalt",
   "evolution.material.bismuth": "Bismuth",
@@ -581,14 +582,14 @@
   "evolution.material.tin": "Tin",
   "evolution.material.wood": "Wood",
   "evolution.material.zinc": "Zinc",
-  "COMMENT_PARTS": "___________________________________________________________________________________________________________________PARTS",
+  "_COMMENT": "________________________________________________________________________________________________________________________________PARTS",
   "evolution.part.handle.one_handed": "One-Handed Handle",
   "evolution.part.head.axe": "Axe Head",
   "evolution.part.head.hoe": "Hoe Head",
   "evolution.part.head.pickaxe": "Pickaxe Head",
   "evolution.part.head.shovel": "Shovel Head",
   "evolution.part.head.spear": "Spear Head",
-  "COMMENT_TOOLTIPS": "_____________________________________________________________________________________________________________TOOLTIPS",
+  "_COMMENT": "_____________________________________________________________________________________________________________________________TOOLTIPS",
   "evolution.tooltip.advancementsRemain": "%1$s remaining",
   "evolution.tooltip.blunt": "Blunt",
   "evolution.tooltip.clayMold": "Place while sneaking to mold",
@@ -643,10 +644,10 @@
   "evolution.tooltip.twoHanded": "Two-Handed",
   "evolution.tooltip.veryEfficient": "Very Efficient!",
   "evolution.tooltip.verySharp": "Very Sharp: %1$s / %2$s",
-  "COMMENT_FLUIDS": "_________________________________________________________________________________________________________________FLUIDS",
+  "_COMMENT": "_______________________________________________________________________________________________________________________________FLUIDS",
   "evolution.fluid.fresh_water": "Fresh Water",
   "evolution.fluid.salt_water": "Salt Water",
-  "COMMENT_BLOCKS": "_________________________________________________________________________________________________________________BLOCKS",
+  "_COMMENT": "_______________________________________________________________________________________________________________________________BLOCKS",
   "block.evolution.block_metal_copper": "Block of Copper",
   "block.evolution.block_metal_copper_exposed": "Exposed Block of Copper",
   "block.evolution.block_metal_copper_weathered": "Weathered Block of Copper",
@@ -964,7 +965,7 @@
   "block.evolution.stone_bricks_slate": "Slate Stone Bricks",
   "block.evolution.tallgrass": "Tall Grass",
   "block.evolution.torch": "Torch",
-  "COMMENT_ITEMS": "___________________________________________________________________________________________________________________ITEMS",
+  "_COMMENT": "________________________________________________________________________________________________________________________________ITEMS",
   "item.evolution.axe.andesite": "Andesite Axe",
   "item.evolution.axe.basalt": "Basalt Axe",
   "item.evolution.axe.bismuth": "Bismuth Axe",
@@ -1291,7 +1292,7 @@
   "item.evolution.spawn_egg_cow": "Cow Spawn Egg",
   "item.evolution.spawn_egg_shadowhound": "Shadowhound Spawn Egg",
   "item.evolution.torch_unlit": "Unlit Torch",
-  "COMMENT_EASTER_EGGS": "________________________________________________________________________________________________________EASTER_EGGS",
+  "_COMMENT": "__________________________________________________________________________________________________________________________EASTER_EGGS",
   "evolution.easter.chert": "The stars were beautiful, weren't they?",
   "evolution.easter.gabbro": "Have you ever stared at a cyclone for so long, it started to hypnotize you?",
   "evolution.easter.gneiss": "Sometimes it feels like just yesterday they were playing their harmonica around the campfire...",
