--- a/src/main/resources/assets/evolution/lang/pt_br.json
+++ b/src/main/resources/assets/evolution/lang/pt_br.json
@@ -1,8 +1,8 @@
 {
-  "COMMENT_WORLD_TYPE": "_________________________________________________________________________________________________________WORLD TYPE",
+  "_COMMENT": "___________________________________________________________________________________________________________________________WORLD TYPE",
   "generator.ev_default": "Mundo Evolution",
   "generator.ev_flat": "Superplano Evolution",
-  "COMMENT_CREATIVE_TABS": "___________________________________________________________________________________________________CREATIVE TABS",
+  "_COMMENT": "________________________________________________________________________________________________________________________CREATIVE TABS",
   "itemGroup.evolution.dev": "Itens de Desenvolvedor",
   "itemGroup.evolution.eggs": "Ovos de Spawn",
   "itemGroup.evolution.liquids": "Líquidos e Recipientes",
@@ -10,7 +10,7 @@
   "itemGroup.evolution.misc": "Diversos",
   "itemGroup.evolution.parts_and_tools": "Partes e Ferramentas",
   "itemGroup.evolution.trees_and_wood": "Árvores e Madeira",
-  "COMMENT_CONFIG": "________________________________________________________________________________________________________________CONFIGS",
+  "_COMMENT": "______________________________________________________________________________________________________________________________CONFIGS",
   "evolution.config.allowedValues": "Valores Permitidos: %1$s",
   "evolution.config.animatedTextures": "Texturas Animadas",
   "evolution.config.animatedTextures.comment": "Usa texturas animadas quando disponíveis no pacote de recursos atual. Desabilitar vai melhorar a performance, mas texturas animadas, como o fogo, vão aparecer estáticas.",
@@ -96,7 +96,7 @@
   "forge.configgui.zombieBabyChance.comment": "Chance que um zumbi (ou subclasse) é um bebê. Permite mudar o mecanismo de invocação de zumbis.",
   "forge.configgui.zombieBaseSummonChance": "Chance Base de Invocar um Zumbi",
   "forge.configgui.zombieBaseSummonChance.comment": "A chance base de invocar um zumbi. Permite mudar a mecânica de invocação bônus de zumbi.",
-  "COMMENT_COMMANDS": "_____________________________________________________________________________________________________________COMMANDS",
+  "_COMMENT": "_____________________________________________________________________________________________________________________________COMMANDS",
   "command.evolution.date.error": "A data não pode ser definida antes de %1$s às %2$s",
   "command.evolution.date.success": "A data foi mudada para %1$s",
   "command.evolution.pause.pause.fail": "O jogo já está pausado. Use /resume para retomar o jogo",
@@ -106,22 +106,23 @@
   "command.evolution.pause.resume.info": "O jogo foi retomado globalmente",
   "command.evolution.pause.resume.success": "O jogo foi retomado para todos",
   "command.evolution.shader.fail": "Não foi possível encontrar um shader com id %1$s",
-  "command.evolution.shader.query": "O id do shader atual é %1$s",
-  "command.evolution.shader.reset": "O shader atual foi redefinido",
-  "command.evolution.shader.success": "O shader atual foi definido para %1$s",
+  "command.evolution.shader.noShader": "Nenhum shader está ativo atualmente",
+  "command.evolution.shader.query": "Os ids dos shaders atuais são: %1$s",
+  "command.evolution.shader.reset": "A lista de shaders atual foi redefinida",
+  "command.evolution.shader.success": "Adicionado shader %1$s à lista de shaders atual",
   "command.evolution.shader.toggleOff": "Os shaders foram desativados",
   "command.evolution.shader.toggleOn": "Os shaders foram ativados",
   "command.evolution.temperature.item.fail": "O item segurado não suporta temperatura",
   "command.evolution.temperature.item.success": "A temperatura de %1$s foi mudada para %2$s K",
   "command.evolution.tickrate.change": "A tickrate do jogo foi mudada para %1$s TPS",
   "command.evolution.tickrate.current": "A tickrate atual do jogo é %1$s TPS",
-  "COMMENT_KEYS": "_____________________________________________________________________________________________________________________KEYS",
+  "_COMMENT": "_________________________________________________________________________________________________________________________________KEYS",
   "key.build_assist": "Assistente de construção",
   "key.crawl.toggle": "Alternar rastejar",
   "key.keyboard.left.control": "Ctrl esquerdo",
   "key.keyboard.left.win": "Windows esquerdo",
   "key.mouse.left": "Botão esquerdo",
-  "COMMENT_ENTITIES": "_____________________________________________________________________________________________________________ENTITIES",
+  "_COMMENT": "_____________________________________________________________________________________________________________________________ENTITIES",
   "entity.evolution.cow": "Vaca",
   "entity.evolution.cow.plural": "Vacas",
   "entity.evolution.player_corpse": "Cadáver de %1$s",
@@ -209,9 +210,9 @@
   "entity.minecraft.zombie_villager": "Aldeão Zumbi",
   "entity.minecraft.zombie_villager.plural": "Aldeões Zumbis",
   "entity.minecraft.zombified_piglin.plural": "Piglins Zumbis",
-  "COMMENT_SPAWN_EGGS": "_________________________________________________________________________________________________________SPAWN EGGS",
+  "_COMMENT": "___________________________________________________________________________________________________________________________SPAWN EGGS",
   "item.evolution.cow_spawn_egg": "Ovo Gerador de Vaca",
-  "COMMENT_STATUS EFFECT": "___________________________________________________________________________________________________STATUS EFFECT",
+  "_COMMENT": "________________________________________________________________________________________________________________________STATUS EFFECT",
   "effect.evolution.dehydration": "Desidratação",
   "effect.evolution.dehydration.desc.0": "Sua injestão deficiente de água causou falta de água no seu corpo, o que comprometerá funções metabólicas básicas.\n\nCausa:\n ► Desabilita a regeneração de vida natural\n ► Desabilita sua habilidade de correr\n ► Aumenta o consumo de energia\n\nPode causar:\n ► Tontura",
   "effect.evolution.dehydration.desc.1": "Sua injestão deficiente de água causou falta de água no seu corpo, o que comprometeu funções metabólicas básicas.\n\nCausa:\n ► Desabilita a regeneração de vida natural\n ► Desabilita sua habilidade de correr\n ► Aumenta o consumo de energia\n ► Lentidão\n\nPode causar:\n ► Tontura",
@@ -284,12 +285,12 @@
   "effect.minecraft.wither.desc.3": "Você está apodrecendo e toma 1HP de dano a cada 5 ticks.",
   "effect.minecraft.wither.desc.4": "Você está apodrecendo e toma 1HP de dano a cada 2 ticks.",
   "effect.minecraft.wither.desc.5": "Você está apodrecendo e toma 1HP de dano a cada tick.",
-  "COMMENT_ACTIONBAR": "___________________________________________________________________________________________________________ACTIONBAR",
-  "evolution.actionbar.hitStake": "Eu deveria cravar a estaca com um martelo antes",
-  "evolution.actionbar.hook": "Eu deveria ter um pouco de corda na outra mão antes",
+  "_COMMENT": "____________________________________________________________________________________________________________________________ACTIONBAR",
+  "evolution.actionbar.hitStake": "Você deveria cravar a estaca com um martelo antes",
+  "evolution.actionbar.hook": "Você deveria ter um pouco de corda na outra mão antes",
   "evolution.actionbar.inertia": "Inércia cancelada",
   "evolution.actionbar.twoHanded": "Esse item deve ser usado com as duas mãos!",
-  "COMMENT_SUBTITLES": "___________________________________________________________________________________________________________SUBTITLES",
+  "_COMMENT": "____________________________________________________________________________________________________________________________SUBTITLES",
   "evolution.subtitle.soil_collapse": "Deslizamento de terra",
   "evolution.subtitle.spear_hit_entity": "Lança acerta",
   "evolution.subtitle.spear_throw": "Lança arremessada",
@@ -300,7 +301,7 @@
   "evolution.subtitle.tree_falling": "Árvore caindo",
   "evolution.subtitle.weapon_hit_block": "Arma acerta bloco",
   "evolution.subtitle.wood_collapse": "Madeira caindo",
-  "COMMENT_DEATH_MESSAGES": "_________________________________________________________________________________________________DEATH MESSAGES",
+  "_COMMENT": "_______________________________________________________________________________________________________________________DEATH MESSAGES",
   "death.attack.dehydration": "%1$s desidratou até a morte",
   "death.attack.efficiency": "%1$s não conseguiu aguentar tamanha eficiência!",
   "death.attack.fall_damage": "%1$s caiu de um lugar alto",
@@ -345,14 +346,14 @@
   "death.fell.killer.ladder": "%1$s foi empurrado de uma escada",
   "death.fell.killer.rope": "%1$s foi empurrado de uma corda",
   "death.fell.killer.vines": "%1$s foi empurrado de algumas vinhas",
-  "COMMENT_ADVANCEMENTS": "_____________________________________________________________________________________________________ADVANCEMENTS",
+  "_COMMENT": "_________________________________________________________________________________________________________________________ADVANCEMENTS",
   "evolution.advancements.general.root.title": "Evolution",
   "evolution.advancements.general.root.description": "",
   "evolution.advancements.general.definitely_a_rock.title": "Definitivamente uma pedra",
   "evolution.advancements.general.definitely_a_rock.description": "Pegue uma pedra",
   "evolution.advancements.general.knapping.title": "Lascar",
   "evolution.advancements.general.knapping.description": "Use uma pedra num bloco de lascar para transformá-lo em algo útil",
-  "COMMENT_STATS": "___________________________________________________________________________________________________________________STATS",
+  "_COMMENT": "________________________________________________________________________________________________________________________________STATS",
   "stat.evolution.chests_opened": "Baús Abertos",
   "stat.evolution.items_dropped": "Itens Largados",
   "stat.evolution.items_thrown": "Itens Arremessados",
@@ -419,7 +420,7 @@
   "stat_type.minecraft.killed_by.name": "Vezes que você foi morto",
   "stat_type.minecraft.killed_by.none": "Você nunca foi morto por %1$s",
   "stat_type.minecraft.killed_by.once": "%1$s mataram você uma vez",
-  "COMMENT_GUIS": "_____________________________________________________________________________________________________________________GUIs",
+  "_COMMENT": "_________________________________________________________________________________________________________________________________GUIs",
   "evolution.gui.general.back": "Voltar",
   "evolution.gui.general.cancel": "Cancelar",
   "evolution.gui.general.done": "Concluído",
@@ -516,7 +517,7 @@
   "evolution.gui.stats.itemsButton": "Itens",
   "evolution.gui.stats.mobsButton": "Criaturas",
   "evolution.gui.stats.timeButton": "Tempo",
-  "COMMENT_CALENDAR": "_____________________________________________________________________________________________________________CALENDAR",
+  "_COMMENT": "_____________________________________________________________________________________________________________________________CALENDAR",
   "evolution.calendar.day.1": "%1$sº",
   "evolution.calendar.day.2": "%1$s",
   "evolution.calendar.day.3": "%1$s",
@@ -551,7 +552,7 @@
   "evolution.calendar.month.october": "Outubro",
   "evolution.calendar.month.november": "Novembro",
   "evolution.calendar.month.december": "Dezembro",
-  "COMMENT_MATERIALS": "___________________________________________________________________________________________________________MATERIALS",
+  "_COMMENT": "____________________________________________________________________________________________________________________________MATERIALS",
   "evolution.material.andesite": "Andesito",
   "evolution.material.basalt": "Basalto",
   "evolution.material.bismuth": "Bismuto",
@@ -581,14 +582,14 @@
   "evolution.material.tin": "Estanho",
   "evolution.material.wood": "Madeira",
   "evolution.material.zinc": "Zinco",
-  "COMMENT_PARTS": "___________________________________________________________________________________________________________________PARTS",
+  "_COMMENT": "________________________________________________________________________________________________________________________________PARTS",
   "evolution.part.handle.one_handed": "Cabo de Uma Mão",
   "evolution.part.head.axe": "Cabeça de Machado",
   "evolution.part.head.hoe": "Cabeça de Enxada",
   "evolution.part.head.pickaxe": "Cabeça de Picareta",
   "evolution.part.head.shovel": "Cabeça de Pá",
   "evolution.part.head.spear": "Cabeça de Lança",
-  "COMMENT_TOOLTIPS": "_____________________________________________________________________________________________________________TOOLTIPS",
+  "_COMMENT": "_____________________________________________________________________________________________________________________________TOOLTIPS",
   "evolution.tooltip.advancementsRemain": "%1$s faltando",
   "evolution.tooltip.blunt": "Cego",
   "evolution.tooltip.clayMold": "Coloque enquanto agachado para moldar",
@@ -643,10 +644,10 @@
   "evolution.tooltip.twoHanded": "Duas Mãos",
   "evolution.tooltip.veryEfficient": "Muito Eficiente!",
   "evolution.tooltip.verySharp": "Muito Afiado: %1$s / %2$s",
-  "COMMENT_FLUIDS": "_________________________________________________________________________________________________________________FLUIDS",
+  "_COMMENT": "_______________________________________________________________________________________________________________________________FLUIDS",
   "evolution.fluid.fresh_water": "Água Doce",
   "evolution.fluid.salt_water": "Água Salgada",
-  "COMMENT_BLOCKS": "_________________________________________________________________________________________________________________BLOCKS",
+  "_COMMENT": "_______________________________________________________________________________________________________________________________BLOCKS",
   "block.evolution.block_metal_copper": "Bloco de Cobre",
   "block.evolution.block_metal_copper_exposed": "Bloco de Cobre Exposto",
   "block.evolution.block_metal_copper_weathered": "Bloco de Cobre Desgastado",
@@ -964,7 +965,7 @@
   "block.evolution.stone_bricks_slate": "Tijolos de Pedra de Ardósia",
   "block.evolution.tallgrass": "Grama Alta",
   "block.evolution.torch": "Tocha",
-  "COMMENT_ITEMS": "___________________________________________________________________________________________________________________ITEMS",
+  "_COMMENT": "________________________________________________________________________________________________________________________________ITEMS",
   "item.evolution.axe.andesite": "Machado de Andesito",
   "item.evolution.axe.basalt": "Machado de Basalto",
   "item.evolution.axe.bismuth": "Machado de Bismuto",
@@ -1291,7 +1292,7 @@
   "item.evolution.spawn_egg_cow": "Ovo de Spawn de Vaca",
   "item.evolution.spawn_egg_shadowhound": "Ovo de Spawn de Cachorro das Sombras",
   "item.evolution.torch_unlit": "Tocha Apagada",
-  "COMMENT_EASTER_EGGS": "________________________________________________________________________________________________________EASTER_EGGS",
+  "_COMMENT": "__________________________________________________________________________________________________________________________EASTER_EGGS",
   "evolution.easter.chert": "As estrelas eram lindas, não eram?",
   "evolution.easter.gabbro": "Você já ficou olhando um ciclone por tanto tempo que começou a ficar hipnotizado?",
   "evolution.easter.gneiss": "Às vezes, é como se fosse ontem que tocavam seus instrumentos em frente à fogueira...",
