Updated Player Corpse screen and container to match new inventory.

--- a/src/main/resources/assets/evolution/lang/en_us.json
+++ b/src/main/resources/assets/evolution/lang/en_us.json
@@ -427,8 +427,7 @@
   "evolution.gui.controls.showUnbound": "Show Unbound",
   "evolution.gui.controls.sort": "Sort: %1$s",
   "evolution.gui.controls.za": "Z→A",
-  "evolution.gui.corpse.gameDateOfDeath": "Date of Death: %1$s",
-  "evolution.gui.corpse.systemDateOfDeath": "System Date of Death: %1$s",
+  "evolution.gui.corpse.death": "\u271e",
   "evolution.gui.corpse.tabDeath": "Death",
   "evolution.gui.corpse.tabInventory": "Inventory",
   "evolution.gui.crafting": "Crafting",
@@ -517,7 +516,9 @@
   "evolution.calendar.day.20": "%1$sth",
   "evolution.calendar.day.21": "%1$sst",
   "evolution.calendar.date": "%2$s %1$s, %3$s",
+  "evolution.calendar.dateShort": "%2$s/%1$s/%3$s",
   "evolution.calendar.dateTime": "%1$s at %2$s",
+  "evolution.calendar.dateTimeShort": "%1$s at %2$s",
   "evolution.calendar.month.january": "January",
   "evolution.calendar.month.february": "February",
   "evolution.calendar.month.march": "March",
