--- a/src/main/resources/assets/evolution/lang/pt_br.json
+++ b/src/main/resources/assets/evolution/lang/pt_br.json
@@ -427,8 +427,7 @@
   "evolution.gui.controls.showUnbound": "Mostrar Indefinidas",
   "evolution.gui.controls.sort": "Ordem: %1$s",
   "evolution.gui.controls.za": "Z→A",
-  "evolution.gui.corpse.gameDateOfDeath": "Data da Morte: %1$s",
-  "evolution.gui.corpse.systemDateOfDeath": "Data da Morte no Sistema: %1$s",
+  "evolution.gui.corpse.death": "\u271e",
   "evolution.gui.corpse.tabDeath": "Morte",
   "evolution.gui.corpse.tabInventory": "Inventário",
   "evolution.gui.crafting": "Fabricação",
@@ -517,7 +516,9 @@
   "evolution.calendar.day.20": "%1$s",
   "evolution.calendar.day.21": "%1$s",
   "evolution.calendar.date": "%1$s de %2$s de %3$s",
+  "evolution.calendar.dateShort": "%1$s/%2$s/%3$s",
   "evolution.calendar.dateTime": "%1$s às %2$s",
+  "evolution.calendar.dateTimeShort": "%1$s às %2$s",
   "evolution.calendar.month.january": "Janeiro",
   "evolution.calendar.month.february": "Fevereiro",
   "evolution.calendar.month.march": "Março",
