Fixed statistics and Spider and Villager models.

--- a/src/main/resources/assets/evolution/lang/en_us.json
+++ b/src/main/resources/assets/evolution/lang/en_us.json
@@ -486,11 +486,9 @@
   "evolution.gui.schematic.showBB": "Show Bounding Box",
   "evolution.gui.schematic.size": "Schematic Size",
   "evolution.gui.stats.damageButton": "Damage",
-  "evolution.gui.stats.damageDealtActual": "Actual Damage Dealt",
-  "evolution.gui.stats.damageDealtRaw": "Raw Damage Dealt",
-  "evolution.gui.stats.damageTakenActual": "Actual Damage Taken",
-  "evolution.gui.stats.damageTakenBlocked": "Damage Blocked",
-  "evolution.gui.stats.damageTakenRaw": "Raw Damage Taken",
+  "evolution.gui.stats.damageDealt": "Damage Dealt",
+  "evolution.gui.stats.damageResisted": "Damage Resisted",
+  "evolution.gui.stats.damageTaken": "Damage Taken",
   "evolution.gui.stats.deathButton": "Deaths",
   "evolution.gui.stats.distanceButton": "Distance",
   "evolution.gui.stats.generalButton": "General",
