--- a/src/main/resources/assets/evolution/lang/pt_br.json
+++ b/src/main/resources/assets/evolution/lang/pt_br.json
@@ -486,11 +486,9 @@
   "evolution.gui.schematic.showBB": "Mostrar Caixa Delimitadora",
   "evolution.gui.schematic.size": "Tamanho do Esquema",
   "evolution.gui.stats.damageButton": "Dano",
-  "evolution.gui.stats.damageDealtActual": "Dano Causado Real",
-  "evolution.gui.stats.damageDealtRaw": "Dano Causado Bruto",
-  "evolution.gui.stats.damageTakenActual": "Dano Tomado Real",
-  "evolution.gui.stats.damageTakenBlocked": "Dano Bloqueado",
-  "evolution.gui.stats.damageTakenRaw": "Dano Tomado Bruto",
+  "evolution.gui.stats.damageDealt": "Dano Causado",
+  "evolution.gui.stats.damageResisted": "Dano Resistido",
+  "evolution.gui.stats.damageTaken": "Dano Tomado",
   "evolution.gui.stats.deathButton": "Mortes",
   "evolution.gui.stats.distanceButton": "Distância",
   "evolution.gui.stats.generalButton": "Geral",
